--- a/agent.html
+++ b/agent.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">cv \\ portfolio</a>
+                <a class="navbar-brand page-scroll" href="/index.html">cv \\ portfolio</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,28 +55,28 @@
                         <a class="page-scroll" href="#cv">Curriculum Vitae</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#dcdash">Greenlight Discharge Dashboard</a>
+                        <a class="page-scroll" href="/dcdash.html">Greenlight Discharge Dashboard</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#agent">Agent</a>
+                        <a class="page-scroll" href="/agent.html">Agent</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#timeline">Hospital Course Timeline</a>
+                    <a class="page-scroll" href="/timeline.html">Hospital Course Timeline</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#pilots">Pilots</a>
+                    <a class="page-scroll" href="/pilots.html">Pilots</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#proposals">Proposals</a>
+                    <a class="page-scroll" href="/proposals.html">Proposals</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#web">Web</a>
+                    <a class="page-scroll" href="/web.html">Web</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#photos">Photography</a>
+                    <a class="page-scroll" href="/photos.html">Photography</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
