--- a/timeline.html
+++ b/timeline.html
@@ -35,7 +35,7 @@
 
 <body id="page-top">
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -55,28 +55,28 @@
                         <a class="page-scroll" href="#cv">Curriculum Vitae</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#dcdash">Greenlight Discharge Dashboard</a>
+                        <a class="page-scroll" href="/dcdash.html">Greenlight Discharge Dashboard</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#agent">Agent</a>
+                        <a class="page-scroll" href="/agent.html">Agent</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#timeline">Hospital Course Timeline</a>
+                    <a class="page-scroll" href="/timeline.html">Hospital Course Timeline</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#pilots">Pilots</a>
+                    <a class="page-scroll" href="/pilots.html">Pilots</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#proposals">Proposals</a>
+                    <a class="page-scroll" href="/proposals.html">Proposals</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#web">Web</a>
+                    <a class="page-scroll" href="/web.html">Web</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#photos">Photography</a>
+                    <a class="page-scroll" href="/photos.html">Photography</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -107,7 +107,7 @@
   <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
+
 
                     <p align="center">        <img src="img/portfolio/agent-timeline.png" alt="" style="width:95%"></p>
                     
