--- a/proposals.html
+++ b/proposals.html
@@ -35,7 +35,7 @@
 
 <body id="page-top">
 
-      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+ <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -45,35 +45,35 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/index.html">cv \\ portfolio</a>
+                <a class="navbar-brand page-scroll" href="index.html">cv \\ portfolio</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#cv">Curriculum Vitae</a>
+                        <a class="page-scroll" href="#cv">CV</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/dcdash.html">Greenlight Discharge Dashboard</a>
+                        <a class="page-scroll" href="dcdash.html">Greenlight Discharge Dashboard</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/agent.html">Agent</a>
+                        <a class="page-scroll" href="agent.html">Agent</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="/timeline.html">Hospital Course Timeline</a>
+                    <a class="page-scroll" href="timeline.html">Hospital Course Timeline</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="/pilots.html">Pilots</a>
+                    <a class="page-scroll" href="pilots.html">Pilots</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="/proposals.html">Proposals</a>
+                    <a class="page-scroll" href="proposals.html">Proposals</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="/web.html">Web</a>
+                    <a class="page-scroll" href="web.html">Web</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="/photos.html">Photography</a>
+                    <a class="page-scroll" href="photos.html">Photography</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#">Contact</a>
@@ -100,10 +100,9 @@
                     <p>Designed schemas for new mHealth Center to communicate proposed organization structure and operations in order to increase transparency within Penn Medicine community</p>
                                     </div>
             </div>
-                    </div></section>
+                    </div>
 
             
-  <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
                 
@@ -145,7 +144,7 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
-    <script src="js/wow.min.js"></script>
+<!--    <script src="js/wow.min.js"></script>-->
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
