--- a/travel.html
+++ b/travel.html
@@ -35,7 +35,7 @@
 
 <body id="page-top">
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -45,38 +45,38 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/index.html">cv \\ portfolio</a>
+                <a class="navbar-brand page-scroll" href="index.html">cv \\ portfolio</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#cv">Curriculum Vitae</a>
+                        <a class="page-scroll" href="#cv">CV</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#dcdash">Greenlight Discharge Dashboard</a>
+                        <a class="page-scroll" href="dcdash.html">Greenlight Discharge Dashboard</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#agent">Agent</a>
+                        <a class="page-scroll" href="agent.html">Agent</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#timeline">Hospital Course Timeline</a>
+                    <a class="page-scroll" href="timeline.html">Hospital Course Timeline</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#pilots">Pilots</a>
+                    <a class="page-scroll" href="pilots.html">Pilots</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#proposals">Proposals</a>
+                    <a class="page-scroll" href="proposals.html">Proposals</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#web">Web</a>
+                    <a class="page-scroll" href="web.html">Web</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#photos">Photography</a>
+                    <a class="page-scroll" href="photos.html">Photography</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -84,6 +84,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
 
 
 
@@ -95,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Photography</h2>
+                    <h2 class="section-heading">Travel</h2>
                                     </div>
             </div>
                     </div></section>
