descriptions and captions

--- a/index.html
+++ b/index.html
@@ -51,29 +51,31 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+<!--
                     <li>
                         <a class="page-scroll" href="#cv">CV</a>
                     </li>
+-->
                     <li>
-                        <a class="page-scroll" href="#dcdash">Greenlight Discharge Dashboard</a>
+                        <a class="page-scroll" href="dcdash.html">Greenlight Discharge Dashboard</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#agent">Agent</a>
+                        <a class="page-scroll" href="agent.html">Agent</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#timeline">Hospital Course Timeline</a>
+                    <a class="page-scroll" href="timeline.html">Hospital Course Timeline</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#pilots">Pilots</a>
+                    <a class="page-scroll" href="pilots.html">Pilots</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#proposals">Proposals</a>
+                    <a class="page-scroll" href="proposals.html">Proposals</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#web">Web</a>
+                    <a class="page-scroll" href="web.html">Web</a>
                     </li>
                     <li>
-                    <a class="page-scroll" href="#photos">Photography</a>
+                    <a class="page-scroll" href="photos.html">Photography</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -107,9 +109,9 @@
                     <h5>Clinical Informatics Product Manager Intern, Penn Medicine Center for Health Care Innovation<br>MD, Perelman School of Medicine at the University of Pennsylvania<br>BS, Massachusetts Institute of Technology
                         <br>
                     </h5>
-                    <h6><i>MO: utilizing design thinking to improve provider work flow &<br>deploying web app and mobile platforms in the in-patient setting</i></h6>
+                    <h6><i> utilizing design thinking to improve provider work flow &<br>deploying webapp and mobile platforms in the in-patient setting</i></h6>
                     
-                    <p><br><a href="#">CV</a></p>
+                    <p><br><a href="#contact"> CV</a></p>
 <!--                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
                 </div>
             </div>
