--- a/dcdash.html
+++ b/dcdash.html
@@ -133,7 +133,9 @@
                         <img src="img/portfolio/dcdash1.png" class="img-responsive" alt="">
                           <img src="img/portfolio/dcdash2.png" class="img-responsive" alt=""><br></p></div>
                        
-            </div></div>
+            </div>
+            <p style = "font-size:13px"><br><i>Performed an initial <a href="los-contextual-inquiry.pdf">contextual inquiry</a> to understand process flow of service lines, floors, bed management, and DRG documentation.</i>   <br><br></p>
+      </div>
     </section>	
      </section>               
 
