--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 </div>
 -->
                 <div class="container text-center">
-                    <p class="fa fa-envelope-o"> kathchoi at upenn dot edu</a></p>
+                    <p class="fa fa-envelope-o"> kathchoi at upenn dot edu<br><br>Please request CV by email.</p>
                 </div>
             </div>
         </div>
