--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h5>Clinical Informatics Product Manager Intern, Penn Medicine Center for Health Care Innovation<br>MD, Perelman School of Medicine at the University of Pennsylvania<br>BS, Massachusetts Institute of Technology
                         <br>
                     </h5>
-                    <h6><i> utilizing design thinking to improve provider work flow &<br>deploying webapp and mobile platforms in the in-patient setting</i></h6>
+<!--                    <h6><i> tilizing design thinking to improve provider work flow &<br>deploying webapp and mobile platforms in the in-patient setting</i></h6>-->
                     
                     <p><br><a href="#contact"> CV</a></p>
 <!--                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
