--- a/dcdash.html
+++ b/dcdash.html
@@ -129,12 +129,10 @@
     </div>
                 
                    <div class="col-lg-20 text-center"><p style = "font-size:13px">
-               <br><i>Staged approach was proposed, from fake-back-end (bottom) to prototype to integration into existing interface (top).</i><br><br>
+               <br><i>Staged approach was proposed, from fake-back-end (bottom) <br>to prototype to integration into existing interface (top).</i><br><br>
                         <img src="img/portfolio/dcdash1.png" class="img-responsive" alt="">
-                          <img src="img/portfolio/dcdash2.png" class="img-responsive" alt=""><br></p></div>
-                       
-            </div>
-            <p style = "font-size:13px"><br><i>Performed an initial <a href="los-contextual-inquiry.pdf">contextual inquiry</a> to understand process flow of service lines, floors, bed management, and DRG documentation.</i>   <br><br></p>
+                          <img src="img/portfolio/dcdash2.png" class="img-responsive" alt=""><br></p>
+                       <p style = "font-size:13px"><br><i>Performed an initial <a href="los-contextual-inquiry.pdf">contextual inquiry</a> to understand process flow of <br>service lines, floors, bed management, and DRG documentation.</i>   <br><br></p></div></div>
       </div>
     </section>	
      </section>               
