--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Katherine Choi, BS</h2>
                     <hr class="light">
-                    <h5>Clinical Informatics Product Manager Intern, Penn Medicine Center for Health Care Innovation<br>MD, Perelman School of Medicine at the University of Pennsylvania<br>BS, Massachusetts Institute of Technology
+                    <h5>Clinical Informatics Product Manager Intern, Penn Medicine Center for Health Care Innovation<br>MD candidate, Perelman School of Medicine at the University of Pennsylvania<br>BS, Massachusetts Institute of Technology
                         <br>
                     </h5>
 <!--                    <h6><i> tilizing design thinking to improve provider work flow &<br>deploying webapp and mobile platforms in the in-patient setting</i></h6>-->
